feat: add permission settings API and view
- Introduced `permission-settings-api.ts` for managing role permissions.
- Implemented tests for the permission settings API in `permission-settings-api.test.ts`.
- Created `PermissionSettingsView.vue` for displaying and managing permissions.
- Added tests for `PermissionSettingsView` to ensure correct rendering and functionality.
- Established documentation for product direction and progress tracking in `product.md` and `progress.md`.
- Added a label group dimension matrix configuration in `label-group-dimension-matrix.yml`.